--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -68,13 +68,13 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 name="Web"
 platform="Web"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../builds/feb22_06_17/index.html"
+export_path="../builds/feb22_22_00/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
